# mcc-mnc-table

./: mcc_mnc_fetcher.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: CNAME  mcc-mnc-table.csv  mcc-mnc-table.json  mcc-mnc-table.xml
