[tool.poetry]
name = "good"
version = "0.1.0"
description = ""
authors = ["ZNing <zhn038@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
